dependencies for celery worker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,9 @@ services:
     deploy:
       mode: replicated
       replicas: 2
+    depends_on:
+      - rabbit
+      - redis
   api:
     build: 
       context: .
